deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: prevail-http
  labels:
    app: prevail-http
spec:
  replicas: 3
  selector:
    matchLabels:
      app: prevail-http
  template:
    metadata:
      labels:
        app: prevail-http
    spec:
      containers:
      - name: http-server
        image: jbelmont/http-server:latest
        ports:
        - containerPort: 8080
