ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: http-server
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: http-server
  rules:
  - http:
      paths:
      - path: /numbers
        pathType: Prefix
        backend:
          service:
            name: http-server
            port:
              number: 8080
